// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot changes of components achievement snapshot 1`] = `
<div>
  <OneLinerHeader
    title="Achievement"
  />
  <BasicDisplay
    list={
      Array [
        "<b>Expo Native Client - cross platform mobile app</b>, created at natwest group for enabling disability intiative. <a class='xred' target='_blank' href='https://expo.io/@devendraprasad1984/BDFAPP_EXPO'>VIEW on your DEVICE</a>",
        "<b>social network portal - web app</b>, created at natwest group for enabling disability intiative,  for govt of india body, CIIIBDN.com. <a class='xred' target='_blank' href='http://ciiibdn.com/portal/'>VIEW</a>",
        "lot of code pushed to github.",
        "certified python and sql developer.",
      ]
    }
  />
</div>
`;

exports[`snapshot changes of components app snapshot 1`] = `<Main />`;

exports[`snapshot changes of components basic display snapshot 1`] = `
<div>
  <div
    className="bl xprimary"
  />
</div>
`;

exports[`snapshot changes of components bottom bar snapshot 1`] = `
<div
  className="bottom right margin-ud"
>
  <a
    className="btn"
    href="#"
    key="link-key-0"
    target="_blank"
  >
    +91 958 279 7772
  </a>
  <a
    className="btn"
    href="https://github.com/devendraprasad1984/loan_payment_app"
    key="link-key-1"
    target="_blank"
  >
    GIT: py-django-loan-ledger-api-app
  </a>
  <a
    className="btn"
    href="http://dpresume.com/react-build"
    key="link-key-2"
    target="_blank"
  >
    react
  </a>
  <a
    className="btn"
    href="https://dpresume.com/vanila-js/"
    key="link-key-3"
    target="_blank"
  >
    react-like-VANILA-js
  </a>
  <a
    className="btn"
    href="https://dpresume.com/customTagging/jsReadHTMLAttributes.html"
    key="link-key-4"
    target="_blank"
  >
    custom-js-html-tags
  </a>
  <a
    className="btn"
    href="https://github.com/devendraprasad1984/python"
    key="link-key-5"
    target="_blank"
  >
    python
  </a>
  <a
    className="btn"
    href="https://github.com/devendraprasad1984/python/tree/master/designPatterns"
    key="link-key-6"
    target="_blank"
  >
    design-pattern
  </a>
  <a
    className="btn"
    href="https://github.com/devendraprasad1984/python/tree/master/algo"
    key="link-key-7"
    target="_blank"
  >
    algo
  </a>
  <a
    className="btn"
    href="https://github.com/devendraprasad1984/nodejs"
    key="link-key-8"
    target="_blank"
  >
    node
  </a>
  <a
    className="btn"
    href="https://github.com/devendraprasad1984/python/tree/master/djangoTest"
    key="link-key-9"
    target="_blank"
  >
    django
  </a>
  <a
    className="btn"
    href="https://github.com/devendraprasad1984/python/tree/master/tornadoPractice"
    key="link-key-10"
    target="_blank"
  >
    tornado
  </a>
  <a
    className="btn"
    href="https://www.hackerrank.com/devendraprasad11?hr_r=1"
    key="link-key-11"
    target="_blank"
  >
    hackerrank.com
  </a>
</div>
`;

exports[`snapshot changes of components certificate snapshot 1`] = `
<div>
  <OneLinerHeader
    title="Certifications"
  />
  <BasicDisplay
    list={
      Array [
        "<b>Certified Associate</b> Python Institute.",
        "<b>1Z0-071 Oracle DB SQL</b> (OC1849712), Oracle University.",
        "<b>React+Redux</b> (UC-91YOYH2M), Udemy.",
      ]
    }
  />
</div>
`;

exports[`snapshot changes of components education snapshot 1`] = `
<div>
  <OneLinerHeader
    title="Education Summary"
  />
  <BasicDisplay
    list={
      Array [
        "<b>PGDITM</b>, SCDL, Symbiosis, Pune, India (2017)",
        "<b>BTech IT</b>, MDU Rohtak, Haryana, India (2007)",
      ]
    }
  />
</div>
`;

exports[`snapshot changes of components experience snapshot 1`] = `
<div
  className="margin-ud"
>
  <OneLinerHeader
    title="Overall Experience"
  />
  <div
    key="proj_exp_0"
  >
    <h1>
      Tech Lead @ Royal Bank Of Scotland
       - 
      Oct11-current
       
      ☕
    </h1>
    <BasicDisplay
      className="margin-ud"
      list={
        Array [
          "Arria NLG (Natural Language Generation)",
          "DRA - Disclosure Reporting Automation",
          "Oracle Analytical Cloud Service",
          "Cash Nostro Management Systems",
        ]
      }
      tag="Projects"
    />
    <BasicDisplay
      className="margin-ud"
      list={
        Array [
          "I work as lead analytics developer over Arria NLG & tableau platform.",
          "I work(ed) as fullstack developer over high ledger data volume in Oracle 11.",
          "I am involved in Arria NLG platform wide improvements and stability concerns.",
          "I work(ed) on DB design, Microservice REST API Design, data loader strategy.",
          "I can work smoothly on UI development using ReactJs.",
          "I use(d) pylint, jshint, coverage.py, unittest.py for code quality & TDD.",
          "I do code review and provide technical guidance to development team.",
          "I work(ed) with Architects finalising strategies around our solution.",
          "I use(d) Argon APIs for cross platform message (SOAP/JSON/files) deliveries interanally.",
          "I use JIRA & Leankit for agile, bug tracking and backlog grooming.",
          "I help defining project outcomes, recruit & grow team, handle end-user queries.",
          "I train(ed) some of new joiners and graduate developers & peers.",
          "I follow MBDL( More Better Different Less ) practices for retrospectives.",
        ]
      }
      tag="Roles & Responsbilities"
    />
  </div>
  <div
    key="proj_exp_1"
  >
    <h1>
      Programmer @ Syntel
       - 
      Apr11-Sep11
       
      ☕
    </h1>
    <BasicDisplay
      className="margin-ud"
      list={
        Array [
          "Information Publisher macros",
          "Markdown Optimisation template for requisition management system",
        ]
      }
      tag="Projects"
    />
    <BasicDisplay
      className="margin-ud"
      list={
        Array [
          "As an agile sprint developer i handled development of above projects and also dealt in other SDLC phases and to end to end support of the projects",
        ]
      }
      tag="Roles & Responsbilities"
    />
  </div>
  <div
    key="proj_exp_2"
  >
    <h1>
      Programmer @ 9 Dimensions
       - 
      Nov09-Mar11
       
      ☕
    </h1>
    <BasicDisplay
      className="margin-ud"
      list={
        Array [
          "PRVit (Performance Risk Valuation Investment Technique)",
        ]
      }
      tag="Projects"
    />
    <BasicDisplay
      className="margin-ud"
      list={
        Array [
          "i handled all development and support related work in the project",
        ]
      }
      tag="Roles & Responsbilities"
    />
  </div>
  <div
    key="proj_exp_3"
  >
    <h1>
      Programmer @ DAVIM
       - 
      Sep07-Sep08
       
      ☕
    </h1>
    <BasicDisplay
      className="margin-ud"
      list={
        Array [
          "Software development training to MCA students",
          "Library Management",
        ]
      }
      tag="Projects"
    />
    <BasicDisplay
      className="margin-ud"
      list={
        Array [
          "i handled all development and support related work in the project and also trained MCA students on VB6 application development platform",
        ]
      }
      tag="Roles & Responsbilities"
    />
  </div>
</div>
`;

exports[`snapshot changes of components header snapshot 1`] = `
<div
  className="margin-ud"
>
  <div
    className="row"
  >
    <h1
      className="size30"
    >
      Devendra Prasad
       
      <a
        className="bl size30 xred"
        href="https://dpresume.com/docs/pdf/dpresume.pdf#view=FitH"
        target="_blank"
      >
        ↓
      </a>
    </h1>
    <h2>
      Tech Lead Software Engineer
    </h2>
  </div>
  <div
    className="row xviolet"
  >
    <p
      className="size10"
    >
      technophile . dynamic . motivated . inquisitive
    </p>
    <p
      className="size10"
    >
      devendraprasad1984@gmail.com, ☏ +91-958 279 7772
    </p>
  </div>
</div>
`;

exports[`snapshot changes of components home snapshot 1`] = `
<div>
  <OneLinerHeader
    title="Summarising myself"
  />
  <BasicDisplay
    list={
      Array [
        "I practice TDD based frontend mainly React.js, html and vanila Js and backend mainly python, django, postgres and devops CI/CD",
        "I maintain code quality using sonarqube, git hooks and constant review cycle",
        "I design secure api calls through django+flask+tornado built in auth tokens, RS256 (public-private keys) / HS256 (secret key & certificate) JWT, crypto signer, csrf, cookies, white-listing and short lived tokens",
        "I do Code . Collaborate . Build . Change . Incident . Release . Triage",
        "I help in recruiting, grow team and work on enabling team",
        "I am a code reviewer,mentor and face to dev team",
        "I use JIRA | Leankit | Trello for agility, bug tracking and backlog grooming",
        "I know SDLC, Incident | Change | Release management life cycles",
      ]
    }
  />
  <HomeDemo />
</div>
`;

exports[`snapshot changes of components html component snapshot 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "➤ dummy title",
    }
  }
/>
`;

exports[`snapshot changes of components navigation snapshot 1`] = `
<div>
  <HashRouter>
    <div
      className="right"
    >
      <a
        className="right bl size20"
        onClick={[Function]}
      >
        ✖
      </a>
    </div>
    <div
      className="row"
    >
      <div>
        <div>
          <img
            alt="dp"
            className="imgPic img-animate"
            src="dp.png"
          />
        </div>
        <nav
          className="content-left flex1"
        >
          <div
            className="col"
          >
            <span
              className="link size15 margin-ud"
              key="menu-item-0"
            >
              <NavLink
                activeClassName="active"
                exact={true}
                onClick={[Function]}
                to="/home"
              >
                Home
              </NavLink>
            </span>
            <span
              className="link size15 margin-ud"
              key="menu-item-1"
            >
              <NavLink
                activeClassName="active"
                exact={true}
                onClick={[Function]}
                to="/education"
              >
                Education
              </NavLink>
            </span>
            <span
              className="link size15 margin-ud"
              key="menu-item-2"
            >
              <NavLink
                activeClassName="active"
                exact={true}
                onClick={[Function]}
                to="/achievement"
              >
                Achievement
              </NavLink>
            </span>
            <span
              className="link size15 margin-ud"
              key="menu-item-3"
            >
              <NavLink
                activeClassName="active"
                exact={true}
                onClick={[Function]}
                to="/certification"
              >
                Certification
              </NavLink>
            </span>
            <span
              className="link size15 margin-ud"
              key="menu-item-4"
            >
              <NavLink
                activeClassName="active"
                exact={true}
                onClick={[Function]}
                to="/experience"
              >
                Experience
              </NavLink>
            </span>
            <span
              className="link size15 margin-ud"
              key="menu-item-5"
            >
              <NavLink
                activeClassName="active"
                exact={true}
                onClick={[Function]}
                to="/projects"
              >
                Projects
              </NavLink>
            </span>
            <span
              className="link size15 margin-ud"
              key="menu-item-6"
            >
              <NavLink
                activeClassName="active"
                exact={true}
                onClick={[Function]}
                to="/skills"
              >
                Skills
              </NavLink>
            </span>
            <span
              className="link size15 margin-ud"
              key="menu-item-7"
            >
              <NavLink
                activeClassName="active"
                exact={true}
                onClick={[Function]}
                to="/somejs"
              >
                SomeJs
              </NavLink>
            </span>
            <span
              className="link size15 margin-ud"
              key="menu-item-8"
            >
              <NavLink
                activeClassName="active"
                exact={true}
                onClick={[Function]}
                to="/notes"
              >
                Notes
              </NavLink>
            </span>
            <span
              className="link size15 margin-ud"
              key="menu-item-9"
            >
              <NavLink
                activeClassName="active"
                exact={true}
                onClick={[Function]}
                to="/blogs"
              >
                Blogs
              </NavLink>
            </span>
          </div>
        </nav>
      </div>
      <div
        className="content-right"
      >
        <Switch>
          <Route
            exact={true}
            path="/"
          >
            <Home
              title="Summarising myself"
            />
          </Route>
          <Route
            key="route-item-0"
            path="/home"
          >
            <Home
              title="Summarising myself"
            />
          </Route>
          <Route
            key="route-item-1"
            path="/education"
          >
            <Education
              title="Education Summary"
            />
          </Route>
          <Route
            key="route-item-2"
            path="/achievement"
          >
            <Achievement
              title="Achievement"
            />
          </Route>
          <Route
            key="route-item-3"
            path="/certification"
          >
            <Certificate
              title="Certifications"
            />
          </Route>
          <Route
            key="route-item-4"
            path="/experience"
          >
            <Experience
              title="Overall Experience"
            />
          </Route>
          <Route
            key="route-item-5"
            path="/projects"
          >
            <Projects
              title="few Project details "
            />
          </Route>
          <Route
            key="route-item-6"
            path="/skills"
          >
            <Skills
              title="Skills I know or can do"
            />
          </Route>
          <Route
            key="route-item-7"
            path="/somejs"
          >
            <NoData
              type="404"
            />
          </Route>
          <Route
            key="route-item-8"
            path="/notes"
          >
            <Notes
              title="my self learning and notes"
            />
          </Route>
          <Route
            key="route-item-9"
            path="/blogs"
          >
            <NoData
              type="404"
            />
          </Route>
        </Switch>
      </div>
    </div>
  </HashRouter>
</div>
`;

exports[`snapshot changes of components noData 404 snapshot 1`] = `
<div>
  <div
    className="xred notfound center"
  >
    <h2
      className="xblue size35"
    >
      4
      <span
        className="xgray"
      >
        0
      </span>
      4
    </h2>
    <br />
    <span>
      Page Not Found
    </span>
  </div>
</div>
`;

exports[`snapshot changes of components noData ok text snapshot 1`] = `
<div>
  <h3>
    dummy title
     
  </h3>
</div>
`;

exports[`snapshot changes of components oneliner snapshot 1`] = `
<h1
  className="active size25"
>
  dummy title
</h1>
`;

exports[`snapshot changes of components oneliner_1 snapshot 1`] = `
<h1
  className="active size25"
>
  Education Summary
</h1>
`;

exports[`snapshot changes of components projects snapshot 1`] = `
<div
  className="margin-ud"
>
  <OneLinerHeader
    title="few Project details "
  />
  <div
    key="proj_0"
  >
    <h1>
      RBS-Natwest
    </h1>
    <div
      className="margin-rl"
      key="inside-proj-row0"
    >
      <h3
        className="xprimary"
      >
        CeX / RfX, Natwest Group, Mar2021 - Sep2021
      </h3>
      <p
        className="margin-rl"
      >
        These projects are regression projects for Risk Based Markets Economic factors and
            produce risk weights on scenario variables. To achieve this, we hook univar and moody’s
            analytics APIs and get data snapshots and do regression & analytics over it. We used
            internal SSO, python3, django, django-rest, postgres and React.Js to achieve the output
      </p>
    </div>
    <div
      className="margin-rl"
      key="inside-proj-row1"
    >
      <h3
        className="xprimary"
      >
        Smart Disability Initiatives, Natwest Group, Aug2020 - Jan2021
      </h3>
      <p
        className="margin-rl"
      >
        I have opted to be in the disability initiative and contributed by making one social network
        platform for disabled carers and NGOs and CII-IBDN indian government body and native
        app for the BDF(Business Disability Forum) group in the UK
      </p>
    </div>
    <div
      className="margin-rl"
      key="inside-proj-row2"
    >
      <h3
        className="xprimary"
      >
        Arria NLG Budgets and Forecasts Narratives, Jul2019 - Nov2020
      </h3>
      <p
        className="margin-rl"
      >
        This project was intended for automatic commentary / notes / narratives generation from
        bank statement reports using Arria.com NLG platform and using Tableau UI /
        dashboarding capabilities.
      </p>
    </div>
    <div
      className="margin-rl"
      key="inside-proj-row3"
    >
      <h3
        className="xprimary"
      >
        Finance Portal, Apr2016 - Jul2018
      </h3>
      <p
        className="margin-rl"
      >
        Across the Bank, for statutory / regulatory needs, the project uses standard and
        configurable reports approach to building disclosures using MVC, Python3 & Tornado, Javascript, React/Html5 and Sql & PlSql in Oracle 11g.
      </p>
    </div>
    <div
      className="margin-rl"
      key="inside-proj-row4"
    >
      <h3
        className="xprimary"
      >
        CNMS - Cash Nostro Management System, Oct2011 - Jan2015
      </h3>
      <p
        className="margin-rl"
      >
        Soap implemented, python proxy server, acts as middleware, the aim was to have a single instance accessing
        RBS cash balances server and can give relevant data to authorized clients identified by
        IPs.
      </p>
    </div>
  </div>
  <div
    key="proj_4"
  >
    <h1>
      Miscellaneous
    </h1>
    <p>
      L3 support, non technology / reporting / migration projects
    </p>
  </div>
  <div
    key="proj_5"
  >
    <h1>
      Agile-Ceremonies
    </h1>
    <p>
      planning, estimation, sprint, retrospective, review
    </p>
  </div>
  <div
    key="proj_6"
  >
    <h1>
      SDLC
    </h1>
    <p>
      requirements gathering, analysis, design, coding, testing, deployment and support
    </p>
  </div>
  <div
    key="proj_7"
  >
    <h1>
      Others
    </h1>
    <p>
      Library Management, PRVit, MDO, iPub, few automation tools in excel
    </p>
  </div>
</div>
`;

exports[`snapshot changes of components skills snapshot 1`] = `
<div>
  <OneLinerHeader
    title="Skills I know or can do"
  />
  <div
    key="skill-0"
  >
    <h2
      className="xprimary"
    >
      BackEnd:
    </h2>
    <BasicDisplay
      className="padding-rl"
      list={
        Array [
          "python: 3.6.7~5",
          "Tornado: 5.1.1~4",
          "django: 3.1.6~4",
          "flask: 1.1.2~4",
          "Tableau: 2019.1.3~3",
          "sqlAlchemy~3",
          "autosys~5",
          "mongoDB~2",
          "Git~5",
        ]
      }
    />
  </div>
  <div
    key="skill-1"
  >
    <h2
      className="xprimary"
    >
      FrontEnd
    </h2>
    <BasicDisplay
      className="padding-rl"
      list={
        Array [
          "HTML5 . ES6~5",
          "react: 16.8.0~4",
          "svelte: 3.0.0~4",
          "recoil: latest~4",
          "node: latest~4",
          "typeOrm: latest~4",
          "redux: 4.0.1~3",
          "D3Js~4",
        ]
      }
    />
  </div>
  <div
    key="skill-2"
  >
    <h2
      className="xprimary"
    >
      Databases
    </h2>
    <BasicDisplay
      className="padding-rl"
      list={
        Array [
          "Oracle 11g~4",
          "postgres~4",
          "sql.plsql.joins~5",
        ]
      }
    />
  </div>
  <div
    key="skill-3"
  >
    <h2
      className="xprimary"
    >
      Servers
    </h2>
    <BasicDisplay
      className="padding-rl"
      list={
        Array [
          "apache: 2.4.0~5",
          "http-server, browserify, watchify, uglify~5",
        ]
      }
    />
  </div>
</div>
`;
